@@ -1,3 +1,7 @@
+2019-09-30         John E. Malmberg     <wb8tyw@qsl.net>
+
+	* custom.h: OpenVMS does not provide ULLONG_MAX
+
 2019-09-20  Florian Weimer  <fweimer@redhat.com>
 
 	* configure.ac (PRINTF_HAS_F_FORMAT): Include <string.h> for
